TPort 1.19
        /*
         * changelog 1.19 update:
         *
         * fixed permissions of the commands:
         *  /tport language repair <language> [repair with]     inverted check for permissions
         *  /tport language server [language]                   did not check for permissions
         *
         * added a TPort preview. With this you can preview a tport without less permission of the Tport owner.
         *  /tport preview <player> <TPort name>
         *  /tport features preview state [state]
         *  /tport edit <TPort name> preview [state]
         *  added the quick edit for the preview settings in your TPort GUI
         *  in a TPort gui you can preview the TPort by pressing your drop key
         *
         * fixed /tport backup load <name>
         * fixed some inconsistencies
         *
         * created a Discord server for TPort
         *
         * /tport delay permissions [state] is now /tport delay handler [state]
         * /tport restriction permissions [state] is now /tport restriction handler [state]
         *
         * added /tport setHome. This allows you to see what your home is set to
         *
         * Fixed item duplication when the server was reloading but a player had still a TPort GUI open. After the reload the player could take all the items out of the inventory.
         * Now all TPort inventories will be closed on reload
         */